--- a/LTE-Cell-Scanner/README
+++ b/LTE-Cell-Scanner/README
@@ -49,3 +49,7 @@ Search for LTE carriers within a common LTE frequency range used in the US:
 
 Above was borrowed from:
 https://gist.github.com/darksidelemm/b517e6a9b821c50c170f1b9b7d65b824
+
+Notes:
+http://www.evrytania.com/lte-tools/lte-cell-scanner
+
